# MAGNET

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  SCHEMA_DIFF_NOTES.md  magnet-explainer.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  base.py  class_reviewer.py  director.py  naval_architect.py  propulsion_engineer.py  structural_engineer.py  supervisor.py
api/: __init__.py  control_plane.py  dashboard.py
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.ts  main.tsx
config/alpha/: __init__.py
constraints/: __init__.py  hull_form.py
databases/: __init__.py
deployment/: .env.runpod.template  Dockerfile  Dockerfile.runpod  docker-compose.yml
docs/: CLI_V1_ARCHITECTURE.md  INTEGRATION_PLAN.md  INTEGRATION_PLAN_V2.md  INTENT_ACTION_PROTOCOL.md  MODULE_65.1_COMPOUND_INTENT.md  MODULE_67X_BROAD_CHAT_COMMANDS.md
frontend/components/: ErrorDisplay.tsx  GeometryModeIndicator.tsx
frontend/hooks/: useAnnotations.ts  useGeometryEvents.ts  useHullGeometry.ts
frontend/three/: HullMesh.ts  MaterialLibrary.ts  SceneManager.ts  SectionPlane.ts  StructureMesh.ts
frontend/types/: events.ts  schema.ts
frontend/utils/: binaryParser.ts  exportHelpers.ts
geometry/: __init__.py  frames.py  members.py  reference.py  zones.py
magnet/: __init__.py
magnet/agents/: __init__.py  api_endpoints.py  clarification.py  factory.py  llm_client.py
magnet/analysis/: __init__.py  noise_vibration.py  noise_vibration_analyzer.py  noise_vibration_validator.py  seakeeping.py  seakeeping_predictor.py  seakeeping_validator.py
magnet/arrangement/: __init__.py  generator.py  models.py  validators.py
magnet/bootstrap/: __init__.py  app.py  config.py  container.py  entrypoints.py  state_compat.py
magnet/cli/: __init__.py  commands.py  core.py  repl.py
magnet/compliance/: __init__.py  checkers.py  engine.py  enums.py  rule_library.py  rule_schema.py  validators.py
magnet/contracts/: __init__.py  design_state_contract.py  domain_hashes.py  phase_machine_contract.py  state_manager_contract.py
magnet/core/: __init__.py  constants.py  dataclasses.py  design_state.py  enums.py  field_aliases.py  parameter_bounds.py  phase_ownership.py  (+5 more)
memory/: __init__.py  file_io.py  schemas.py
orchestration/: __init__.py  consensus.py  coordinator.py
physics/: __init__.py
quantization/: __init__.py
schemas/: __init__.py  hull_params.py  mission.py
scripts/: chat_cli.py  run_design.py
spatial/: __init__.py
spiral/: __init__.py  clustering.py  phases.py
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_class_reviewer.py  test_gate1_hull_form.py  test_geometry.py  test_memory.py  test_naval_architect.py  test_orchestration.py  test_physics.py  test_propulsion_engineer.py  test_spiral.py  test_structural.py  test_structural_engineer.py  test_supervisor.py  test_webgl_export.py  test_weight.py
validation/: __init__.py  bounds.py  semantic.py
(+652 files in other folders)
