[project]
name = "magnet"
version = "1.0.0"
description = "MAGNET - Maritime Architecture Generation & Naval Engineering Toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "1Quant Logistics", email = "engineering@1quantlogistics.com"}
]
keywords = ["naval", "architecture", "marine", "engineering", "design"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0",
    # HTTP Client
    "httpx>=0.27.0",
    # LLM Provider
    "anthropic>=0.18.0",
    # Graph/Math
    "networkx>=3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    # Document Generation
    "python-docx>=0.8.11",
    "Pillow>=9.0.0",
    # Config/Serialization
    "PyYAML>=6.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]
runpod = [
    "runpod>=1.3.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["magnet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
